css/styles.css
:root {
  --main-color-background: #ffffff;
  --second-color-background: #2e2f42;
  --third-color-background: #f4f4fd;
  --main-color-headline: #2e2f42;
  --second-color-headline: #ffffff;
  --main-color-paragraph: #434455;
  --second-color-paraagraph: #e7e9fc;
  --button-color: #4d5ae5;
  --hover-color: #404bbf;
  /* --card-interval: 24px; */
}

html {
  box-sizing: border-box;
}
*,
*::before,
*::after {
  box-sizing: inherit;
}

/*-------------- clear styles --------- */
ul,
ol {
  list-style: none;
  padding: 0;
  margin: 0;
}
a {
  text-decoration: none;
  padding: 0;
  margin: 0;
}
p {
  text-decoration: none;
  padding: 0;
  margin: 0;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
}
img {
  display: block;
  max-width: 100%;
  height: auto;
}

/*---------------- Body -----------------*/
body {
  margin: 0;
  background-color: var(--main-color-background);
  color: var(--main-color-paragraph);
  font-family: 'roboto', sans-serif;
}

.container {
  width: 1158px;
  padding-left: 15px;
  padding-right: 15px;
  margin: 0 auto;
}

/* -------- Navigation set ------ */
.site-nav {
  display: flex;
  margin-left: 76px;
  gap: 24px;
}

/* .site-nav .page-navigation + .page-navigation {
  margin-left: 24px;
} */

.contact-nav {
  display: flex;
  gap: 40px;
}

/* .contact-nav .contact-link + .contact-link {
  margin-left: 40px;
} */
.navigation {
  display: flex;
  align-items: center;
}
.main-nav {
  display: flex;
  align-items: center;
}
.address-nav {
  display: flex;
  margin-left: auto;
}

/*----------------- Header -----------------*/
.page-header {
  border-bottom: 1px solid #e7e9fc;
}

.page-header .logo,
.page-header .accent,
.page-footer .accent {
  align-items: center;

  color: var(--main-color-headline);
  font-family: 'Raleway', sans-serif;
  font-style: normal;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.33;
  text-transform: uppercase;
  letter-spacing: 0.03em;
}
.page-header .accent,
.page-footer .accent {
  color: var(--button-color);
}

.site-nav .page {
  display: block;
  padding-top: 24px;
  padding-bottom: 24px;

  color: var(--main-color-headline);
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
}

.address-nav .link {
  color: var(--main-color-paragraph);
  font-style: normal;
  font-size: 16px;
  line-height: 1.5;
}

.site-nav .page:hover,
.site-nav .page:focus,
.site-nav .page:active,
.address-nav .link:hover,
.address-nav .link:focus,
.address-nav .link:active {
  color: var(--hover-color);
}

/*------------------- MAIN ----------------------- */
/*------------ Hero----------- */
.hero {
  text-align: center;
  padding-top: 188px;
  padding-bottom: 188px;

  background-color: var(--second-color-background);
  background-image: linear-gradient(
      to right,
      rgba(46, 47, 66, 0.7),
      rgba(46, 47, 66, 0.7)
    ),
    url(../images/people-office.jpg);
}

.hero .hero-headline {
  margin-bottom: 48px;
  text-align: center;
  max-width: 496px;
  margin-left: auto;
  margin-right: auto;

  color: var(--second-color-headline);
  font-style: normal;
  font-weight: 700;
  font-size: 56px;
  line-height: 1.07;
  letter-spacing: 0.02em;
}

/*----------- button -----------*/
.button {
  font-family: inherit;
  background-color: var(--button-color);
  color: var(--second-color-headline);
  cursor: pointer;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  border-radius: 4px;
  border: none;
  padding: 16px 32px;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
  letter-spacing: 0.04em;
}

.button:hover,
.button:focus {
  background-color: var(--hover-color);
}

/*------------- Portfolio ------------*/
.button-portfolio {
  padding: 12px 24px;
  cursor: pointer;

  font-family: inherit;
  background-color: #f4f4fd;
  color: var(--button-color);
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  border-radius: 4px;
  border: 1px solid #e7e9fc;
}

.button-portfolio:hover,
.button-portfolio:focus {
  border-color: var(--hover-color);
  color: var(--second-color-headline);
  background-color: var(--button-color);
  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
    0px 2px 2px rgba(0, 0, 0, 0.12);
}

.project {
  color: var(--main-color-paragraph);
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 24px;
  padding-bottom: 24px;
  border-right: 1px solid #e7e9fc;
  border-left: 1px solid #e7e9fc;
  border-bottom: 1px solid #e7e9fc;
}

/* ------- Button Set -------- */
.button-set {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  margin-bottom: 84px;
  justify-content: center;
  gap: 24px;
}

/*-------------- 3 Section -------------*/
.section.no-padding {
  padding-bottom: 0;
}

.section {
  padding: 120px 0;

  background-color: var(--main-color-background);
  color: var(--main-color-paragraph);
}

.second-section {
  padding: 120px 0;

  background-color: var(--third-color-background);
  text-align: center;
}

.person {
  padding: 24px 5px;
  background-color: var(--main-color-background);
  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
  border-radius: 0px 0px 4px 4px;
}

.section-title {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.section-header {
  margin-bottom: 72px;

  color: var(--main-color-headline);
  font-style: normal;
  font-weight: 700;
  font-size: 36px;
  line-height: 1.11;
  letter-spacing: 0.02em;
  text-transform: capitalize;
  text-align: center;
}

.title.no-padding {
  padding: 0;
}

.title {
  margin-bottom: 8px;

  color: var(--main-color-headline);
  font-style: normal;
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
}

.person .section-title-text,
.project .section-title-text {
  font-size: 16px;
  line-height: 1.5;
}
.section-title-text {
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
}

/* --------- Card Set -------- */

.card-set {
  display: flex;
  flex-wrap: wrap;
  /* margin-left: calc(-1 * var(--card-interval)); */
  align-items: center;
  column-gap: 24px;
  row-gap: 48px;
}
.benefits {
  display: flex;
  gap: 24px;
}

/* .card-set > .box-item {
  margin-left: var(--card-interval);
  flex-basis: calc(100% / 4 - var(--card-interval));
} */

/* .card-set > .box-image {
  margin-left: var(--card-interval);
  flex-basis: calc(100% / 3 - var(--card-interval));
  margin-bottom: 24px;
} */

/* .card-set > .box-image:nth-last-child(-n + 3) {
  margin-bottom: 0;
} */

/* .card-set > .benefits-list {
  margin-left: var(--card-interval);
  flex-basis: calc(100% / 4 - var(--card-interval));
} */

/*------------------- Footer ------------------*/
.page-footer {
  background-color: var(--second-color-background);
  padding: 100px 0;
}

.page-footer .logo {
  display: block;
  align-items: center;
  margin-bottom: 17.5px;

  color: var(--third-color-background);
  font-family: 'Raleway';
  font-style: normal;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.16;
  text-transform: uppercase;
  letter-spacing: 0.03em;
}

.page-footer .text {
  color: var(--second-color-paraagraph);
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  max-width: 264px;
}

